--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ markdown: kramdown
 # theme: phantom # Uncomment once published to RubyGems
 
 plugins:
-  - jekyll-paginate
+  - jekyll-paginate-v2
 
 collections:
     projects:
