--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ markdown: kramdown
 # theme: phantom # Uncomment once published to RubyGems
 
 plugins:
-  - jekyll-paginate-v2
+  - jekyll-paginate
 
 collections:
     projects:
@@ -35,6 +35,10 @@ collections:
 ############################################################
 # Site configuration for the Jekyll 3 Pagination Gem
 # The values here represent the defaults if nothing is set
+paginate: 10
+paginate_path: "/page:num/"
+
+
 pagination:
 
   # permalink: /projects/:title
