--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: "Hello, I'm Nicholas Ko."
 email: 'nicholas.ko.zy@outlook.com'
-description: "Just a Singaporean interested in operations research"
+description: "Welcome to my site!"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://nicholas-ko-zy.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 github_username: 'nicholas-ko-zy'
