--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ linkedin_username: 'nicholas-ko-zy'
 markdown: kramdown
 # theme: phantom # Uncomment once published to RubyGems
 
+kramdown:
+  math_engine: mathjax
+
 plugins:
   - jekyll-paginate
 
